# bitcoin

./: .cirrus.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IGNORE_ME.md  Makefile.am  README.md  configure.ac  libbitcoinsv2.pc.in  new containerbitcoinrcheckout31785.json  test.sh  vcpkg.json
.github/: ci-test-each-commit-exec.py  ci-test-each-commit-exec.sh  ci-windows-cross.py
cmake/: bitcoin-build-config.h.in  libmultiprocess.cmake
contrib/: README.md
depends/: Makefile  README.md  funcs.mk  packages.md  toolchain.cmake.in
doc/: Doxyfile.in  README.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  dependencies.md  descriptors.md  developer-notes.md  files.md  multiprocess.md  multisig-tutorial.md  release-notes-23508.md  release-notes-31583.md  release-notes-31802.md  release-notes-33966.md  release-notes-34568.md  release-notes-xxxxx.md  release-process.md  stratum-v2.md
share/: setup.nsi.in
src/: .clang-format  CMakeLists.txt  Makefile.am  Makefile.qt.include  Makefile.test.include  banman.cpp  banman.h  bitcoin-cli.cpp  bitcoin-mine.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  bitcoind.h  chain.cpp  chain.h  chainparams.cpp  dbwrapper.cpp  dbwrapper.h  deploymentinfo.cpp  dummywallet.cpp  external_signer.cpp  external_signer.h  flatfile.cpp  hash.cpp  hash.h  headerssync.cpp  headerssync.h  httpserver.cpp  init.cpp  init.h  key.cpp  key.h  key_io.cpp  key_io.h  logging.cpp  logging.h  mapport.cpp  merkleblock.cpp  merkleblock.h  (+23 more)
src/ipc/: CMakeLists.txt  interfaces.cpp  protocol.h
src/ipc/capnp/: chain-types.h  common-types.h  init.capnp  mining-types.h  mining.capnp  mining.cpp  protocol.cpp
src/ipc/libmultiprocess/: CMakeLists.txt
src/ipc/libmultiprocess/include/mp/: proxy-io.h  util.h
src/ipc/libmultiprocess/src/mp/: proxy.cpp
src/qt/: intro.h  (+15 more)
src/sv2/: CMakeLists.txt  bitcoinsv2.h  connman.cpp  connman.h  messages.h  template_provider.cpp  template_provider.h  transport.h
test/: CMakeLists.txt  README.md  config.ini.in  (+1 more)
(+377 files in other folders)
